// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render Spacer 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack wp-components-v-stack css-14w80q"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="wp-components-flex-item css-j8ij9i"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item wp-components-flex-block css-1nz71km"
    data-g2-c16t="true"
    data-g2-component="Spacer"
  />
  <div
    class="wp-components-flex-item css-bg0v75"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render alignment 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack wp-components-v-stack css-19ocfe2"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="wp-components-flex-item css-9apqst"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-bg0v75"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack wp-components-v-stack css-14w80q"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="wp-components-flex-item css-9apqst"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-bg0v75"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack wp-components-v-stack css-14w80q"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="wp-components-flex-item css-j8ij9i"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-bg0v75"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-j1yu9m"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;
